--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
 
 <div class="sqs-html-content">
   <p class="" style="white-space:pre-wrap;">Welcome! </p>
-<p class="" style="white-space:pre-wrap;">I am a Ph.D. Candidate in the Department of Political Science at Stanford University. I study international relations and political economy, with an empirical focus on Chinese development aid. </p>
+<p class="" style="white-space:pre-wrap;">I am a first-year M.A. student in the Regional Studies East Asia program at Stanford University. I study the interaction between international political economy and state-business relations in authoritarian regimes, with an empirical focus on the private sector and economic elites in China. </p>
 <p class="" style="white-space:pre-wrap;">My research is forthcoming in the <em>British Journal of Political Science</em> and has been supported by the King Center on Global Development, the Freeman Spogli Institute, the Stanford Center on China's Economy and Institutions, and the Stanford Institute for Economic Policy Research, among others.</p>
-<p class="" style="white-space:pre-wrap;">Prior to doctoral studies, I was a Research Specialist with the Empirical Studies of Conflict (ESOC) project at Princeton University. I hold an M.A. in International Policy from Stanford University and a B.A. in Political Science from the University of Southern California. </p>
-<p class="" style="white-space:pre-wrap;">Get in touch at: <a href="mailto:isabel@example.edu" target="_blank">isabel [at] example.edu</a><br>Twitter: <a href="https://twitter.com/IsabelCai" target="_blank">@IsabelCai</a></p>
+<p class="" style="white-space:pre-wrap;">I hold a B.A. in Political Science, with honors in International Security Studies, from Stanford Univeristy. </p>
+<p class="" style="white-space:pre-wrap;">Get in touch at: <a href="mailto:icai@fas.harvard.edu" target="_blank">icai [at] fas.harvard.edu</a><br>LinkedIn: <a href="https://www.linkedin.com/in/isabel-cai-a58ab3210/" target="_blank">@IsabelCai</a></p>
 </div>
 
 </div>
