--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
 
 <div class="sqs-html-content">
   <p class="" style="white-space:pre-wrap;">Welcome! </p>
-<p class="" style="white-space:pre-wrap;">I am a first-year M.A. student in the Regional Studies East Asia program at Stanford University. I study the interaction between international political economy and state-business relations in authoritarian regimes, with an empirical focus on the private sector and economic elites in China. </p>
-<p class="" style="white-space:pre-wrap;">My research is forthcoming in the <em>British Journal of Political Science</em> and has been supported by the King Center on Global Development, the Freeman Spogli Institute, the Stanford Center on China's Economy and Institutions, and the Stanford Institute for Economic Policy Research, among others.</p>
-<p class="" style="white-space:pre-wrap;">I hold a B.A. in Political Science, with honors in International Security Studies, from Stanford Univeristy. </p>
+<p class="" style="white-space:pre-wrap;">I am a first-year M.A. student in the Regional Studies East Asia program at Harvard University. I study the interaction between international political economy and state-business relations in authoritarian regimes. </p>
+<p class="" style="white-space:pre-wrap;">My research concerns two questions. First, how are private firms affected unevenly by globalization and thus form divergent preferences? Second, how do these preferences aggregate and translate into foreign policy without democratic institutions? My current empirical focus is on the private sector and economic elites in China.</p>
+<p class="" style="white-space:pre-wrap;">I hold a B.A. in Political Science from Stanford Univeristy. I have worked as research assistants at the Freeman-Spogli Institute, Hoover Institution, and Carnegie Endowment. Currently, I am co-founding a platform to connect manufacturing SMEs and proprietorships in China to clients in the U.S.  </p>
 <p class="" style="white-space:pre-wrap;">Get in touch at: <a href="mailto:icai@fas.harvard.edu" target="_blank">icai [at] fas.harvard.edu</a><br>LinkedIn: <a href="https://www.linkedin.com/in/isabel-cai-a58ab3210/" target="_blank">@IsabelCai</a></p>
 </div>
 
