--- a/research.html
+++ b/research.html
@@ -94,41 +94,15 @@
 </div>
 </div>
 </div>
+
+
 <div class="row sqs-row">
 <div class="col sqs-col-12 span-12">
 <div class="sqs-block html-block sqs-block-html" data-block-type="2">
 <div class="sqs-block-content">
 
 <div class="sqs-html-content">
-  <h2 style="text-align:center;white-space:pre-wrap;">publications</h2>
-  <ul>
-    <li>
-      <p style="white-space:pre-wrap;">"Strategies of a Rising Power: Chinese Economic Influence in Regional International Organizations." 2025 (Online First). <em>British Journal of Political Science</em>.</p>
-      <ul>
-        <li><p style="white-space:pre-wrap;">[<a href="#" target="_blank">publisher's version</a>] [<a href="#" target="_blank">author's version</a>] [<a href="#" target="_blank">appendix</a>] [<a href="#" target="_blank">replication</a>]</p></li>
-      </ul>
-    </li>
-  </ul>
-</div>
-
-</div>
-</div>
-</div>
-</div>
-<div class="row sqs-row">
-<div class="col sqs-col-12 span-12">
-<div class="sqs-block horizontalrule-block sqs-block-horizontalrule" data-block-type="47">
-<div class="sqs-block-content"><hr /></div>
-</div>
-</div>
-</div>
-<div class="row sqs-row">
-<div class="col sqs-col-12 span-12">
-<div class="sqs-block html-block sqs-block-html" data-block-type="2">
-<div class="sqs-block-content">
-
-<div class="sqs-html-content">
-  <h2 style="text-align:center;white-space:pre-wrap;">working papers</h2>
+  <h2 style="text-align:center;white-space:pre-wrap;">works in progress</h2>
   <ul>
     <li><p style="white-space:pre-wrap;">"<a href="#" target="_blank">Decentralized Economic Statecraft</a>"</p></li>
     <li><p style="white-space:pre-wrap;">"<a href="#" target="_blank">Electoral Incentives and the Choice of Infrastructure Development Aid</a>"</p></li>
@@ -144,36 +118,9 @@
 </div>
 </div>
 </div>
-<div class="row sqs-row">
-<div class="col sqs-col-12 span-12">
-<div class="sqs-block horizontalrule-block sqs-block-horizontalrule" data-block-type="47">
-<div class="sqs-block-content"><hr /></div>
-</div>
-</div>
-</div>
-<div class="row sqs-row">
-<div class="col sqs-col-12 span-12">
-<div class="sqs-block html-block sqs-block-html" data-block-type="2">
-<div class="sqs-block-content">
 
-<div class="sqs-html-content">
-  <h2 style="text-align:center;white-space:pre-wrap;">policy</h2>
-  <ul>
-    <li><p style="white-space:pre-wrap;"><strong>Cai, I.</strong> and Collaborator, V. 2020. <a href="#" target="_blank">"Policy Brief Title."</a> <em>Policy Journal.</em></p></li>
-  </ul>
-</div>
 
-</div>
-</div>
-</div>
-</div>
-<div class="row sqs-row">
-<div class="col sqs-col-12 span-12">
-<div class="sqs-block horizontalrule-block sqs-block-horizontalrule" data-block-type="47">
-<div class="sqs-block-content"><hr /></div>
-</div>
-</div>
-</div>
+
 </div>
       </div>
 
