Update works in progress

--- a/research.html
+++ b/research.html
@@ -104,13 +104,8 @@
 <div class="sqs-html-content">
   <h2 style="text-align:center;white-space:pre-wrap;">works in progress</h2>
   <ul>
-    <li><p style="white-space:pre-wrap;">"<a href="#" target="_blank">Decentralized Economic Statecraft</a>"</p></li>
-    <li><p style="white-space:pre-wrap;">"<a href="#" target="_blank">Electoral Incentives and the Choice of Infrastructure Development Aid</a>"</p></li>
-    <li><p style="white-space:pre-wrap;">"Aid and Conflict, by Donor"</p></li>
-    <li><p style="white-space:pre-wrap;">"Aid, Debt, and Policy Concessions" (with Liam Bethlendy)</p></li>
-    <li><p style="white-space:pre-wrap;">"Foreign Pressure, Reputation Effects, and Chinese Cooperation at the UNSC"</p></li>
-    <li><p style="white-space:pre-wrap;">"Top-Down Management Leaves Detectable Patterns in Influence Campaign Topic Choice" (with Jacob N. Shapiro, Roland Adorjani, and Meysam Alizadeh)</p></li>
-    <li><p style="white-space:pre-wrap;">"Divisive Usage of Race and Religion in Russian Information Operations Increase Hate Crimes in U.S." (with Jacob N. Shapiro and Meysam Alizadeh)</p></li>
+    <li><p style="white-space:pre-wrap;">"Firm-level Drivers of China's Outward Foreign Direct Investment"</p></li>
+    <li><p style="white-space:pre-wrap;">"Nationalist Supporters of Economic Globalization" </p></li>
   </ul>
 </div>
 
