--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
               "
               >
                 
-                <img data-stretch="false" data-src="https://via.placeholder.com/1630x2209" data-image="https://via.placeholder.com/1630x2209" data-image-dimensions="1630x2209" data-image-focal-point="0.5,0.5" alt="" data-load="false" src="https://via.placeholder.com/1630x2209" width="1630" height="2209" alt="" sizes="(max-width: 640px) 100vw, (max-width: 767px) 50vw, 50vw" style="display:block;object-fit: cover; width: 100%; height: 100%; object-position: 50% 50%" onload="this.classList.add(&quot;loaded&quot;)" loading="lazy" decoding="async">
+                <img src="photo.jpg" alt="Isabel Cai" style="display:block; width: 350px; height: auto; max-width: none;" loading="lazy" decoding="async">
 
             </div>
           </div>
