--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta name="description" content="" />
     <link rel="preconnect" href="https://use.typekit.net" crossorigin>
     <link rel="preconnect" href="https://p.typekit.net" crossorigin>
-    <script type="text/javascript" src="https://use.typekit.net/ik/XNb_8i9kSmDVaLBFkim-3JyCfSHh68nGQpD12BWcGHMfe7IgfFHN4UJLFRbh52jhWDjUw2StZewk52sK52SuFDjojQsRwD9DjUGMJ6U3ScNt-AuyOAozicI7fbKnMsMMeMI6MKG4f5J7IMMjMkMfH6qJn3IbMg6IJMJ7f6K3UMIbMg6BJMJ7fbKlMsMMeMj6MKG4fJCgIMMjgkMfH6qJCMIbMg65JMJ7f6KUUMIbMg6VJMJ7fbKwMsMMegI6MTMgDFpgzMj.js" async fetchpriority="high" onload="try{Typekit.load();}catch(e){} document.documentElement.classList.remove('wf-loading');"></script>
+  <script type="text/javascript" src="https://use.typekit.net/ik/XNb_8i9kSmDVaLBFkim-3JyCfSHh68nGQpD12BWcGHMfe7IgfFHN4UJLFRbh52jhWDjUw2StZewk52sK52SuFDjojQsRwD9DjUGMJ6U3ScNt-AuyOAozicI7fbKnMsMMeMI6MKG4f5J7IMMjMkMfH6qJn3IbMg6IJMJ7f6K3UMIbMg6BJMJ7fbKlMsMMeMj6MKG4fJCgIMMjgkMfH6qJCMIbMg65JMJ7f6KUUMIbMg6VJMJ7fbKwMsMMegI6MTMgDFpgzMj.js" async fetchpriority="high" onload="try{Typekit.load();}catch(e){}; document.documentElement.classList.remove('wf-loading');"></script>
     <script>document.documentElement.classList.add('wf-loading')</script>
     <style>@keyframes fonts-loading { 0%, 99% { color: transparent; } } html.wf-loading * { animation: fonts-loading 3s; }</style>
     <link rel="stylesheet" href="styles.css">
@@ -146,12 +146,12 @@
               has-aspect-ratio
             " style="
                 position: relative;
-                padding-bottom:115.29412078857422%;
-                overflow: hidden;-webkit-mask-image: -webkit-radial-gradient(white, black);
+                padding-bottom: 0;
+                overflow: visible; -webkit-mask-image: -webkit-radial-gradient(white, black); mask-image: radial-gradient(white, black);
               "
               >
                 
-                <img src="photo.jpg" alt="Isabel Cai" style="display:block; width: 350px; height: auto; max-width: none;" loading="lazy" decoding="async">
+                <img data-stretch="false" data-src="photo.jpg" data-image="photo.jpg" data-image-dimensions="1630x2209" data-image-focal-point="0.5,0.5" alt="" data-load="false" src="photo.jpg" width="1630" height="2209" alt="" sizes="(max-width: 640px) 100vw, (max-width: 767px) 50vw, 50vw" style="display:block; width:250px; height:auto; object-fit: none; object-position: 50% 50%" onload='this.classList.add("loaded")' loading="lazy" decoding="async">
 
             </div>
           </div>
