--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 <p class="" style="white-space:pre-wrap;">I am a first-year M.A. student in the <a href="https://rsea.fas.harvard.edu/" target="_blank">Regional Studies East Asia</a> program at Harvard University. I study the interaction between international political economy and state-business relations in authoritarian regimes. </p>
 <p class="" style="white-space:pre-wrap;">My research concerns two questions. First, how are private firms affected unevenly by globalization and thus form divergent preferences? Second, how do these preferences aggregate and translate into foreign policy without democratic institutions? My current empirical focus is on the private sector and economic elites in China.</p>
 <p class="" style="white-space:pre-wrap;">I hold a B.A. in Political Science, with honors in <a href="https://cisac.fsi.stanford.edu/education/honors-program" target="_blank">International Security Studies</a>, from Stanford Univeristy. I have worked as research assistants at the Freeman-Spogli Institute, Hoover Institution, and Carnegie Endowment. </p>
-<p class="" style="white-space:pre-wrap;">Currently, I am building a platform to connect manufacturing SMEs and proprietorships in China to clients in the U.S.  </p>
+<p class="" style="white-space:pre-wrap;">Currently, I am building an agentic platform for small manufacturers in China and customers in the U.S. to find each other, negotiate, and reach deals.  </p>
 <p class="" style="white-space:pre-wrap;">Get in touch at: <a href="mailto:icai@fas.harvard.edu" target="_blank">icai [at] fas.harvard.edu</a><br>LinkedIn: <a href="https://www.linkedin.com/in/isabel-cai-a58ab3210/" target="_blank">@IsabelCai</a></p>
 </div>
 
