--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <a href="/">about</a>
       </li>
       <li class=" external-link">
-          <a href="https://www.dropbox.com/placeholder/cv.pdf?dl=0" target="_blank">c.v.</a>
+          <a href="https://github.com/isabelcai/isabelcai.github.io/blob/main/cv.pdf" target="_blank">c.v.</a>
       </li>
       <li class="page-collection">
           <a href="research.html">research</a>
