--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <a href="/">about</a>
             </li>
             <li class=" external-link">
-                <a href="https://isabelcai.github.io/blob/main/cv.pdf" target="_blank">c.v.</a>
+                <a href="cv.pdf" target="_blank">c.v.</a>
             </li>
             <li class="page-collection">
                 <a href="research.html">research</a>
@@ -116,7 +116,7 @@
           <a href="/">about</a>
       </li>
       <li class=" external-link">
-          <a href="https://isabelcai.github.io/blob/main/cv.pdf" target="_blank">c.v.</a>
+          <a href="cv.pdf" target="_blank"">c.v.</a>
       </li>
       <li class="page-collection">
           <a href="research.html">research</a>
